[tool.poetry]
name = "Dentbot"
version = "0.1.0"
description = ""
authors = ["Boris"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.3.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
